@@ -6,13 +6,14 @@ import com.acmecorp.notification.service.NotificationService;
 import com.acmecorp.notification.web.NotificationRequest;
 import com.acmecorp.notification.web.NotificationResponse;
 import com.acmecorp.notification.web.PageResponse;
-import jakarta.validation.Valid;
+import javax.validation.Valid;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/notification")
@@ -35,7 +36,7 @@ public class NotificationController {
     @PostMapping("/send")
     public Map<String, Object> send(@Valid @RequestBody NotificationRequest request) {
         notificationService.enqueue(request);
-        return Map.of("status", "QUEUED", "recipient", request.recipient());
+        return Map.of("status", "QUEUED", "recipient", request.getRecipient());
     }
 
     @GetMapping
@@ -45,7 +46,9 @@ public class NotificationController {
                                                    @RequestParam(name = "page", defaultValue = "0") int page,
                                                    @RequestParam(name = "size", defaultValue = "20") int size) {
         var notifications = notificationService.list(recipient, status, type, page, size);
-        var responses = notifications.getContent().stream().map(NotificationResponse::from).toList();
+        var responses = notifications.getContent().stream()
+                .map(NotificationResponse::from)
+                .collect(Collectors.toList());
         return PageResponse.from(new PageImpl<>(responses, PageRequest.of(page, size), notifications.getTotalElements()));
     }
 
